--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,6 @@
-@import './base/_settings';
-@import './base/_base';
+@import './base/settings';
+@import './base/base';
+//Components
+@import './components/auth';
+@import './components/buttons';
+@import './components/links';
