Eliminar nota y limpiar estado al momento de cerrar sesión

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -14,6 +14,14 @@
     }
 }
 
+.btn-danger {
+    background-color: red;
+    transition: background-color .03s ease;
+    &:hover {
+        background-color: darken($color: red, $amount: 10);
+    }
+}
+
 .btn-primary {
     background-color: $primary;
     border-radius: 2px;
